--- a/src/components/footer/footer.module.scss
+++ b/src/components/footer/footer.module.scss
@@ -14,9 +14,10 @@
   a:active,
   a:visited {
     font-size: 1.25rem;
-    color: #2b2b2b;
     padding: .375rem;
-    border: 2px solid #2b2b2b;
+    color: #2b2b2b;
+    // border: 2px solid #2b2b2b;
+    border: 1px solid gray;
     border-radius: 50%;
   }
 }
